Clean-up integration tests and improve re-use of pomless projects
If tycho-pomless is used in (integration) test-resources/projects the
entire project structure, especially including the '.mvn' folder has to
be copied into the clean test-environment, even if just a sub-project is
executed.
This extends AbstractTychoIntegrationTest.getVerifier() to add overloads
that allow to specify the project-structure root and the specific
sub-folder that is eventually executed.